src/xpoa_sys.rs

/* automatically generated by rust-bindgen 0.72.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct PoaSetting {
    pub min_identity: f32,
    pub match_score: ::std::os::raw::c_int,
    pub mismatch_score: ::std::os::raw::c_int,
    pub insertion_score: ::std::os::raw::c_int,
    pub deletion_score: ::std::os::raw::c_int,
    pub ed_unify_strand: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of PoaSetting"][::std::mem::size_of::<PoaSetting>() - 24usize];
    ["Alignment of PoaSetting"][::std::mem::align_of::<PoaSetting>() - 4usize];
    ["Offset of field: PoaSetting::min_identity"]
        [::std::mem::offset_of!(PoaSetting, min_identity) - 0usize];
    ["Offset of field: PoaSetting::match_score"]
        [::std::mem::offset_of!(PoaSetting, match_score) - 4usize];
    ["Offset of field: PoaSetting::mismatch_score"]
        [::std::mem::offset_of!(PoaSetting, mismatch_score) - 8usize];
    ["Offset of field: PoaSetting::insertion_score"]
        [::std::mem::offset_of!(PoaSetting, insertion_score) - 12usize];
    ["Offset of field: PoaSetting::deletion_score"]
        [::std::mem::offset_of!(PoaSetting, deletion_score) - 16usize];
    ["Offset of field: PoaSetting::ed_unify_strand"]
        [::std::mem::offset_of!(PoaSetting, ed_unify_strand) - 20usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Subread {
    pub seq: *mut ::std::os::raw::c_char,
    pub flags: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Subread"][::std::mem::size_of::<Subread>() - 16usize];
    ["Alignment of Subread"][::std::mem::align_of::<Subread>() - 8usize];
    ["Offset of field: Subread::seq"][::std::mem::offset_of!(Subread, seq) - 0usize];
    ["Offset of field: Subread::flags"][::std::mem::offset_of!(Subread, flags) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Result {
    pub seq: *mut ::std::os::raw::c_char,
    pub n_passes: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Result"][::std::mem::size_of::<Result>() - 16usize];
    ["Alignment of Result"][::std::mem::align_of::<Result>() - 8usize];
    ["Offset of field: Result::seq"][::std::mem::offset_of!(Result, seq) - 0usize];
    ["Offset of field: Result::n_passes"][::std::mem::offset_of!(Result, n_passes) - 8usize];
};
unsafe extern "C" {
    pub fn PoaDraftFreeResult(result: Result);
}
unsafe extern "C" {
    pub fn PoaDraftGen(reads: *const Subread, num_sbr: usize, setting: *const PoaSetting)
        -> Result;
}
unsafe extern "C" {
    pub fn PoaDraftGenWithAllFwdStrand(
        reads: *const Subread,
        num_sbr: usize,
        setting: *const PoaSetting,
    ) -> Result;
}
